--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,10 @@
         "issues": "https://github.com/BeatSwitch/lock-laravel/issues"
     },
     "require": {
-        "php": ">=5.4.0",
-        "beatswitch/lock": "0.1.*"
+        "php": ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "illuminate/auth": "~4",
-        "illuminate/database": "~4",
-        "illuminate/support": "~4"
+        "phpunit/phpunit": "~4.0"
     },
     "autoload": {
         "psr-4": {
